tcp-https-envoy-config-v2.yaml
#location: /home/adminux/envoy/
#command to run: envoy -c tcp-https-envoy-config-v2.yaml -l off --component-log-level http:debug,connection:debug --log-path /var/log/envoy-tcp-v2.log
static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: all_http_ingress
          route_config:
            name: all_http_route
            virtual_hosts:
            - name: all_http_cluster
              domains: ["*"]
              routes:
              - match: { prefix: "/hc"}
                direct_response: { status: 200, body: { inline_string: "soy el health check del envoy onprem" }}
              - match:
                 safe_regex:
                  google_re2: {}
                  regex: "\/ActinverServices\/.*"
                route: { cluster: localhost }
              - match:
                 safe_regex:
                  google_re2: {}
                  regex: "\/"
                route: { cluster: micros-develop-act }
#              - match:
#                 safe_regex:
#                  google_re2: {}
#                  regex: "\/auth\/realms\/ms-anthos-qa\/protocol\/openid-connect\/token"
#                route: { cluster: token }
          http_filters:
          - name: envoy.filters.http.router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context: 
            tls_certificates:
              certificate_chain: {filename: "/home/adminux/envoy/certs/v2dlenvoy01.cer"}
              private_key: {filename: "/home/adminux/envoy/certs/v2dlenvoy01-key.pem"}
            alpn_protocols: ["h2,http/1.1"]
#            tls_params:
#               tls_minimum_protocol_version: "TLSv1_3"
            validation_context:
               trusted_ca:
                  filename: /home/adminux/envoy/certs/RootCAActinver.cer        

  - name: tcp_listener_localhost
    address:
      socket_address: { address: 0.0.0.0, port_value: 20000 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_localhost
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:               
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: localhost_tcp
          cluster: test-tcp
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20001
    address:
      socket_address: { address: 0.0.0.0, port_value: 20001 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20001
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20001
          cluster: cluster_20001
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20002
    address:
      socket_address: { address: 0.0.0.0, port_value: 20002 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20002
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
#                         address_prefix: 10.12.10.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20002
          cluster: cluster_20002
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log          

  - name: tcp_listener_20003
    address:
      socket_address: { address: 0.0.0.0, port_value: 20003 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20003
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
#                         address_prefix: 10.10.115.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20003
          cluster: cluster_20003
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20004
    address:
      socket_address: { address: 0.0.0.0, port_value: 20004 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20004
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                        address_prefix: 10.155.255.0 
                        prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20004
          cluster: cluster_20004
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20005
    address:
      socket_address: { address: 0.0.0.0, port_value: 20005 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20005
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20005
          cluster: cluster_20005
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20006
    address:
      socket_address: { address: 0.0.0.0, port_value: 20006 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20006
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20006
          cluster: cluster_20006
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20007
    address:
      socket_address: { address: 0.0.0.0, port_value: 20007 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20007
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20007
          cluster: cluster_20007
          
  - name: tcp_listener_20008
    address:
      socket_address: { address: 0.0.0.0, port_value: 20008 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20008
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20008
          cluster: cluster_20008
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20009
    address:
      socket_address: { address: 0.0.0.0, port_value: 20009 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20009
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                        address_prefix: 10.155.255.0 
                        prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20009
          cluster: cluster_20009
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20010
    address:
      socket_address: { address: 0.0.0.0, port_value: 20010 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20010
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20010
          cluster: cluster_20010
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20011
    address:
      socket_address: { address: 0.0.0.0, port_value: 20011 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20011
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20011
          cluster: cluster_20011
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20012
    address:
      socket_address: { address: 0.0.0.0, port_value: 20012 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20012
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20012
          cluster: cluster_20012
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20013
    address:
      socket_address: { address: 0.0.0.0, port_value: 20013 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20013
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20013
          cluster: cluster_20013
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log
          
  - name: tcp_listener_20014
    address:
      socket_address: { address: 0.0.0.0, port_value: 20014 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20014
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20014
          cluster: cluster_20014
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20015
    address:
      socket_address: { address: 0.0.0.0, port_value: 20015 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20015
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20015
          cluster: cluster_20015
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20016
    address:
      socket_address: { address: 0.0.0.0, port_value: 20016 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20016
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20016
          cluster: cluster_20016
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20017
    address:
      socket_address: { address: 0.0.0.0, port_value: 20017 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20017
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20017
          cluster: cluster_20017
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20018
    address:
      socket_address: { address: 0.0.0.0, port_value: 20018 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20018
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20018
          cluster: cluster_20018
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20019
    address:
      socket_address: { address: 0.0.0.0, port_value: 20019 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20019
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20019
          cluster: cluster_20019
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20020
    address:
      socket_address: { address: 0.0.0.0, port_value: 20020 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20020
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20020
          cluster: cluster_20020
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20021
    address:
      socket_address: { address: 0.0.0.0, port_value: 20021 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20021
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20021
          cluster: cluster_20021
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20022
    address:
      socket_address: { address: 0.0.0.0, port_value: 20022 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20022
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20022
          cluster: cluster_20022
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20023
    address:
      socket_address: { address: 0.0.0.0, port_value: 20023 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20023
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20023
          cluster: cluster_20023
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20024
    address:
      socket_address: { address: 0.0.0.0, port_value: 20024 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20024
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20024
          cluster: cluster_20024
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20025
    address:
      socket_address: { address: 0.0.0.0, port_value: 20025 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20025
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20025
          cluster: cluster_20025
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20026
    address:
      socket_address: { address: 0.0.0.0, port_value: 20026 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20026
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20026
          cluster: cluster_20026
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20027
    address:
      socket_address: { address: 0.0.0.0, port_value: 20027 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20027
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20027
          cluster: cluster_20027
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20028
    address:
      socket_address: { address: 0.0.0.0, port_value: 20028 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20028
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20028
          cluster: cluster_20028
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20029
    address:
      socket_address: { address: 0.0.0.0, port_value: 20029 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20029
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20029
          cluster: cluster_20029
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20030
    address:
      socket_address: { address: 0.0.0.0, port_value: 20030 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20030
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20030
          cluster: cluster_20030
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20031
    address:
      socket_address: { address: 0.0.0.0, port_value: 20031 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20031
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20031
          cluster: cluster_20031
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20032
    address:
      socket_address: { address: 0.0.0.0, port_value: 20032 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20032
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20032
          cluster: cluster_20032
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20033
    address:
      socket_address: { address: 0.0.0.0, port_value: 20033 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20033
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20033
          cluster: cluster_20033
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20034
    address:
      socket_address: { address: 0.0.0.0, port_value: 20034 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20029
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20034
          cluster: cluster_20034
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20035
    address:
      socket_address: { address: 0.0.0.0, port_value: 20035 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20035
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20035
          cluster: cluster_20035
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20036
    address:
      socket_address: { address: 0.0.0.0, port_value: 20036 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20036
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20036
          cluster: cluster_20036
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20037
    address:
      socket_address: { address: 0.0.0.0, port_value: 20037 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20037
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20037
          cluster: cluster_20037
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20038
    address:
      socket_address: { address: 0.0.0.0, port_value: 20038 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20038
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20038
          cluster: cluster_20038
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20039
    address:
      socket_address: { address: 0.0.0.0, port_value: 20039 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20039
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20039
          cluster: cluster_20039
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20040
    address:
      socket_address: { address: 0.0.0.0, port_value: 20040 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20040
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20040
          cluster: cluster_20040
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20041
    address:
      socket_address: { address: 0.0.0.0, port_value: 20041 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20041
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20041
          cluster: cluster_20041
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20042
    address:
      socket_address: { address: 0.0.0.0, port_value: 20042 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20042
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20042
          cluster: cluster_20042
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20043
    address:
      socket_address: { address: 0.0.0.0, port_value: 20043 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20043
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20043
          cluster: cluster_20043
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20044
    address:
      socket_address: { address: 0.0.0.0, port_value: 20044 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20044
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20044
          cluster: cluster_20044
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20045
    address:
      socket_address: { address: 0.0.0.0, port_value: 20045 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20045
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20045
          cluster: cluster_20045
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20046
    address:
      socket_address: { address: 0.0.0.0, port_value: 20046 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20046
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20046
          cluster: cluster_20046
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20047
    address:
      socket_address: { address: 0.0.0.0, port_value: 20047 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20047
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20047
          cluster: cluster_20047
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20048
    address:
      socket_address: { address: 0.0.0.0, port_value: 20048 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20048
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20048
          cluster: cluster_20048
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20049
    address:
      socket_address: { address: 0.0.0.0, port_value: 20049 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20049
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20049
          cluster: cluster_20049
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

  - name: tcp_listener_20050
    address:
      socket_address: { address: 0.0.0.0, port_value: 20050 }
    filter_chains:
    - filters:
       - name: envoy.filters.network.rbac
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
           stat_prefix: rbac_stats_20050
           rules:
              action: ALLOW
              policies:
                "service-access":
                   principals:
                     - remote_ip:
                         address_prefix: 127.0.0.0
                         prefix_len: 8
                     - remote_ip:
                         address_prefix: 10.155.255.0
                         prefix_len: 26
                   permissions:
                     - any: true
       - name: envoy.tcp_proxy
         typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_listener_20050
          cluster: cluster_20050
          access_log:
            - name: envoy.access_loggers.file
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /var/log/tcp_access.log

                
  clusters:
  - name: localhost
    connect_timeout: 1.0s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: localhost
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.111.3
                port_value: 9080

  - name: micros-develop-act
    connect_timeout: 1.0s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: micros-develop-act
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.11.9.40
                port_value: 443
#  - name: token
#    connect_timeout: 1.0s
#    type: STRICT_DNS
#    lb_policy: ROUND_ROBIN
#    load_assignment:
#      cluster_name: token
#      endpoints:
#      - lb_endpoints:
#        - endpoint:
#            address:
#              socket_address:
#                address: 10.11.6.2
#                port_value: 443

#Aqui comienzan los cluster http/https
  - name: test-tcp
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: test-tcp
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.16.17.13
                port_value: 9081
                ipv4_compat: true

  - name: eureka-server
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: eureka-server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "eureka-server-mx-actinver-services.apps.openshift.sonic-server.com.mx"
                port_value: 443
                ipv4_compat: true
  - name: development.actinver.com.mx
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: development.actinver.com.mx
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "development.actinver.com.mx"
                port_value: 443
                ipv4_compat: true

                

#Aqui comienzan los cluster TCP                
  - name: cluster_20001
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20001
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.111.144
                port_value: 1521
                ipv4_compat: true
                
  - name: cluster_20002
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20002
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.21
                port_value: 1521
                ipv4_compat: true
                
  - name: cluster_20003
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20003
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.115.81
                port_value: 5432
                ipv4_compat: true
                
  - name: cluster_20004
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20004
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.11.1.32
                port_value: 56814
                ipv4_compat: true
                
  - name: cluster_20005
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20005
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.11.10.23
                port_value: 1521
                ipv4_compat: true
                
  - name: cluster_20006
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20006
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.2.255
                port_value: 22
                ipv4_compat: true

  - name: cluster_20007
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20007
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.2.255
                port_value: 80
                ipv4_compat: true
                
  - name: cluster_20008
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20008
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.2.255
                port_value: 443
                ipv4_compat: true
                
  - name: cluster_20009
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20009
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.16.3.158
                port_value: 22
                ipv4_compat: true
                
  - name: cluster_20010
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20010
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.16.3.158
                port_value: 80
                ipv4_compat: true
                
  - name: cluster_20011
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20011
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.16.3.158
                port_value: 443
                ipv4_compat: true
                
  - name: cluster_20012
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20012
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.111.148
                port_value: 1530
                ipv4_compat: true
                
  - name: cluster_20013
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20013
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.111.149
                port_value: 1530
                ipv4_compat: true
                
  - name: cluster_20014
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20014
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 192.168.0.76
                port_value: 3306
                ipv4_compat: true
                
  - name: cluster_20015
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20015
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.111.20
                port_value: 80
                ipv4_compat: true
                
  - name: cluster_20016
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20016
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.10.111.20
                port_value: 443
                ipv4_compat: true
                
  - name: cluster_20017
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20017
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.4.39
                port_value: 8001
                ipv4_compat: true
                
  - name: cluster_20018
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20018
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.11.10.19
                port_value: 1521
                ipv4_compat: true
                
  - name: cluster_20019
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20019
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.11.10.21
                port_value: 1521
                ipv4_compat: true
                
  - name: cluster_20020
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20020
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.11.10.21
                port_value: 2484
                ipv4_compat: true
                
  - name: cluster_20021
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20021
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.16
                port_value: 1522
                ipv4_compat: true
                
  - name: cluster_20022
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20022
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.16
                port_value: 1571
                ipv4_compat: true
                
  - name: cluster_20023
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20023
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.16
                port_value: 1587
                ipv4_compat: true
                
  - name: cluster_20024
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20024
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.18
                port_value: 1521
                ipv4_compat: true
                
  - name: cluster_20025
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20025
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.18
                port_value: 1587
                ipv4_compat: true

  - name: cluster_20026
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20026
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.14.2.131
                port_value: 22
                ipv4_compat: true

  - name: cluster_20027
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20027
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.14.2.131
                port_value: 80
                ipv4_compat: true

  - name: cluster_20028
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20028
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.14.2.131
                port_value: 443
                ipv4_compat: true

  - name: cluster_20029
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20029
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.15
                port_value: 1521
                ipv4_compat: true

  - name: cluster_20030
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20030
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.15
                port_value: 1522
                ipv4_compat: true

  - name: cluster_20031
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20031
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.15
                port_value: 1527
                ipv4_compat: true

  - name: cluster_20032
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20032
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.16
                port_value: 1521
                ipv4_compat: true

  - name: cluster_20033
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20033
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.17
                port_value: 1521
                ipv4_compat: true

  - name: cluster_20034
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20034
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.17
                port_value: 1522
                ipv4_compat: true

  - name: cluster_20035
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20035
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.17
                port_value: 1527
                ipv4_compat: true

  - name: cluster_20036
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20036
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.18
                port_value: 1522
                ipv4_compat: true

  - name: cluster_20037
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20037
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.18
                port_value: 1527
                ipv4_compat: true

  - name: cluster_20038
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20038
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.19
                port_value: 1522
                ipv4_compat: true

  - name: cluster_20039
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20039
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.19
                port_value: 1522
                ipv4_compat: true

  - name: cluster_20040
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20040
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.19
                port_value: 1527
                ipv4_compat: true

  - name: cluster_20041
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20041
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.11.6.2
                port_value: 443
                ipv4_compat: true

  - name: cluster_20042
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20042
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.13.14.2
                port_value: 1791
                ipv4_compat: true

  - name: cluster_20043
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20043
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.20
                port_value: 1527
                ipv4_compat: true

  - name: cluster_20044
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20044
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.20
                port_value: 1522
                ipv4_compat: true

  - name: cluster_20045
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20045
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.20
                port_value: 1527
                ipv4_compat: true

  - name: cluster_20046
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20046
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.21
                port_value: 1522
                ipv4_compat: true

  - name: cluster_20047
    connect_timeout: 150s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_20047
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.12.10.21
                port_value: 1527
                ipv4_compat: true
